[package]
name = "ui-druid"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.6", features = ["im"] }
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
nom = "5.1"